--- a/.vitepress/theme/styles.css
+++ b/.vitepress/theme/styles.css
@@ -1,16 +1,20 @@
 :root {
     --vp-home-hero-name-color: transparent;
-    --vp-home-hero-name-background: -webkit-linear-gradient(
-        120deg,
-        #1068b0 30%,
-        #1068b0
-    );
+
     --vp-home-hero-image-background-image: linear-gradient(
         -45deg,
-        #1068b0 50%,
-        #1068b0 50%
+        #c4d4e0 30%,
+        #a5bbe4
     );
-    --vp-home-hero-image-filter: blur(44px);
+    --vp-home-hero-image-filter: blur(40px);
+}
+
+.dark {
+    --vp-home-hero-image-background-image: linear-gradient(
+        -45deg,
+        #1f3b57 30%,
+        #1c2b4a
+    );
 }
 
 @media (min-width: 640px) {
