--- a/.vitepress/theme/styles.css
+++ b/.vitepress/theme/styles.css
@@ -1,6 +1,12 @@
 :root {
     --vp-home-hero-name-color: transparent;
 
+    --vp-home-hero-name-background: -webkit-linear-gradient(
+        120deg,
+        #bd34fe,
+        #41d1ff
+    );
+
     --vp-home-hero-image-background-image: linear-gradient(
         -45deg,
         #c4d4e0 30%,
