--- a/.vitepress/theme/styles.css
+++ b/.vitepress/theme/styles.css
@@ -9,8 +9,9 @@
 
     --vp-home-hero-image-background-image: linear-gradient(
         -45deg,
-        #c4d4e0 30%,
-        #a5bbe4
+        #e4f0ff 0%,
+        #c2dcf5 50%,
+        #d1e3ff 100%
     );
     --vp-home-hero-image-filter: blur(40px);
 }
