--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -17,7 +17,7 @@
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
-.organization-doc .center {
+.doc .center {
     width: 100%;
     display: flex;
     justify-content: center;
